tests/baselines/reference/shorthand-property-es6-amd.errors.txt
tests/cases/compiler/test.ts(1,19): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== tests/cases/compiler/test.ts (1 errors) ====
    import {foo} from './foo';
                      ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.
    const baz = 42;
    const bar = { foo, baz };
    